Added information on editing configurations